--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --mode=production && tsc -p tsconfig.json",
-    "dev": "webpack serve",
+    "start": "webpack serve",
     "prepare": "yarn build",
     "test": "yarn build"
   },
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.4",
+    "@microsoft/fast-foundation": "^3.0.0-alpha.9",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
