Turned on strictNullChecks, strictPropertyInitialization for fast-web-utilities in tsconfig

--- a/packages/utilities/fast-web-utilities/tsconfig.json
+++ b/packages/utilities/fast-web-utilities/tsconfig.json
@@ -3,13 +3,9 @@
     "compilerOptions": {
         "baseUrl": ".",
         "outDir": "./dist",
-        "strictNullChecks": false,
-        "strictPropertyInitialization": false,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true,
         "allowJs": true,
-        "types": [
-            "mocha",
-            "webpack-env",
-            "node"
-        ]
+        "types": ["mocha", "webpack-env", "node"]
     }
 }
