--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "clean-css": "^4.2.3",
     "css-select": "^4.2.1",
     "dns-packet": "^1.3.4",
+    "d3-color": "^3.1.0",
     "favicons/colors": "1.4.0",
     "glob-parent": "^5.1.2",
     "immer": "^9.0.6",
