--- a/packages/tooling/adaptive-ui-explorer/package.json
+++ b/packages/tooling/adaptive-ui-explorer/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-alpha.1",
   "description": "A playground for Adaptive UI",
   "type": "module",
+  "private": true,
   "main": "dist/esm/index.js",
   "types": "dist/adaptive-ui-explorer.d.ts",
   "unpkg": "dist/esm/index.js",
@@ -22,6 +23,7 @@
   "homepage": "https://fast.design",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
+    "build:app": "webpack --mode=production",
     "clean": "node ../../../build/clean.js dist",
     "prepare": "yarn clean && yarn build",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "inject-body-webpack-plugin": "^1.3.0",
     "resolve-typescript-plugin": "^1.2.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.3",
