add defer hydration support to fast-element (#6441)
* adding mutation observer and starting to refactor fast-element

* break observable re-binding into it's own method

* re-apply observable values in constructor so that they don't need to be manually cached and re-applied during connection

* revert unnecessary binding observer changes

* refactor and reogranize draft implementation, adding tests

* added features to exports and updated api report

* Change files

* align StyleStrategy and ElementControllerStrategy implementations

* fix api report

* revert observable property re-assignment

* re-organize hydration support into export paths

* leverage strategy API internally

* make mutation observer internal for now

* revert removal of context export path

* fix unit test failure

* perform default strategy assignment as file side effect

Co-authored-by: nicholasrice <nicholasrice@users.noreply.github.com>

--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -66,6 +66,14 @@
       "types": "./dist/dts/di/di.d.ts",
       "default": "./dist/esm/di/di.js"
     },
+    "./element-hydration": {
+      "types": "./dist/dts/components/hydration.d.ts",
+      "default": "./dist/esm/components/hydration.js"
+    },
+    "./install-element-hydration": {
+      "types": "./dist/dts/components/install-hydration.d.ts",
+      "default": "./dist/esm/components/install-hydration.js"
+    },
     "./pending-task": {
       "types": "./dist/dts/pending-task.d.ts",
       "default": "./dist/esm/pending-task.js"
@@ -75,7 +83,8 @@
   "unpkg": "dist/fast-element.min.js",
   "sideEffects": [
     "./dist/esm/debug.js",
-    "./dist/esm/polyfills.js"
+    "./dist/esm/polyfills.js",
+    "./dist/esm/components/install-hydration.js"
   ],
   "scripts": {
     "clean:dist": "node ../../../build/clean.js dist",
