--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -77,6 +77,7 @@
     "concurrently": "^7.3.0",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "expect": "29.2.1",
     "prettier": "2.0.2",
     "qs": "^6.11.0",
     "resolve-typescript-plugin": "^1.2.0",
