--- a/sites/website/package.json
+++ b/sites/website/package.json
@@ -31,9 +31,9 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/core": "2.0.0-beta.20",
-    "@docusaurus/preset-classic": "2.0.0-beta.20",
-    "@docusaurus/theme-live-codeblock": "2.0.0-beta.20",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/theme-live-codeblock": "2.2.0",
     "@microsoft/api-documenter": "7.8.13",
     "concurrently": "^6.2.0"
   },
