--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -2,7 +2,7 @@
   "name": "@microsoft/fast-react-wrapper",
   "description": "A utility for wrapping web components for use in React.",
   "sideEffects": false,
-  "version": "0.3.15",
+  "version": "0.3.16-0",
   "author": {
     "name": "Microsoft",
     "url": "https://discord.gg/FcSNfg4"
@@ -87,7 +87,7 @@
   },
   "dependencies": {
     "@microsoft/fast-element": "^1.11.0",
-    "@microsoft/fast-foundation": "^2.47.0"
+    "@microsoft/fast-foundation": "^2.47.1-0"
   },
   "peerDependencies": {
     "react": ">=16.9.0"
