--- a/sites/fast-website/package.json
+++ b/sites/fast-website/package.json
@@ -12,7 +12,7 @@
     "@fluentui/svg-icons": "^1.1.139",
     "@microsoft/fast-components": "^2.30.6",
     "@microsoft/fast-element": "^1.11.0",
-    "@microsoft/fast-foundation": "^2.47.0",
+    "@microsoft/fast-foundation": "^2.47.1-0",
     "@microsoft/fast-web-utilities": "^5.4.1",
     "@microsoft/site-utilities": "^0.9.0",
     "@rollup/plugin-alias": "^3.1.1",
