--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.0.3",
     "@microsoft/fast-element": "2.0.0-beta.23",
+    "@open-wc/form-control": "^0.4.1",
     "@microsoft/fast-web-utilities": "^6.0.0",
     "tabbable": "^5.2.0",
     "tslib": "^2.4.0"
