--- a/.github/workflows/ci-validate-benchmarks.yml
+++ b/.github/workflows/ci-validate-benchmarks.yml
@@ -23,9 +23,10 @@ jobs:
       - name: Install latest Chrome version
         uses: browser-actions/setup-chrome@v1
         id: setup-chrome
-        run: |
-            echo Installed chromium version: ${{ steps.setup-chrome.outputs.chrome-version }}
-            chrome --version
+        
+      - run: |
+          echo Installed chromium version: ${{ steps.setup-chrome.outputs.chrome-version }}
+          chrome --version
 
   render_create10k:
     name: Run rendering benchmark with create 10k elements operation
