--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -96,7 +96,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.0.3",
-    "@microsoft/fast-element": "^2.0.0-beta.22",
+    "@microsoft/fast-element": "2.0.0-beta.22",
     "@microsoft/fast-web-utilities": "^6.0.0",
     "tabbable": "^5.2.0",
     "tslib": "^2.4.0"
