--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -38,7 +38,7 @@
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
     "build:rollup": "rollup -c",
-    "build:storybook": "build-storybook",
+    "build:storybook": "storybook build",
     "build:tsc": "tsc -p ./tsconfig.build.json",
     "prebuild": "yarn build:tsc",
     "build": "yarn build:rollup",
@@ -54,11 +54,11 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "pretest": "yarn eslint && yarn build-storybook --quiet",
+    "pretest": "yarn eslint && yarn build:storybook --quiet",
     "test": "playwright test",
     "posttest:ci": "yarn doc:ci",
     "start": "yarn start:storybook",
-    "start:storybook": "start-storybook -p 6006"
+    "start:storybook": "storybook dev -p 6006"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.5.7",
@@ -66,15 +66,15 @@
     "@microsoft/api-extractor": "7.24.2",
     "@microsoft/tsdoc-config": "^0.13.4",
     "@playwright/test": "^1.25.2",
+    "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@storybook/addon-docs": "6.5.10",
-    "@storybook/addon-essentials": "6.5.10",
-    "@storybook/addon-links": "6.5.10",
-    "@storybook/builder-webpack5": "6.5.10",
-    "@storybook/csf": "0.0.2--canary.0899bb7.0",
-    "@storybook/html": "6.5.10",
-    "@storybook/manager-webpack5": "6.5.10",
+    "@storybook/addon-docs": "7.0.7",
+    "@storybook/addon-essentials": "7.0.7",
+    "@storybook/addon-links": "7.0.7",
+    "@storybook/csf": "0.1.0",
+    "@storybook/html-vite": "7.0.7",
     "concurrently": "^7.3.0",
+    "@anatine/esbuild-decorators": "^0.2.19",
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "expect": "29.2.1",
@@ -87,11 +87,13 @@
     "rollup": "^2.71.1",
     "source-map-loader": "^0.2.4",
     "source-map": "^0.7.3",
+    "storybook": "7.0.7",
     "svg-inline-loader": "^0.8.2",
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.7.0",
+    "vite": "4.3.3",
     "wait-on": "^6.0.1"
   },
   "dependencies": {
