--- a/sites/fast-color-explorer/package.json
+++ b/sites/fast-color-explorer/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --progress --mode=production",
+    "build:dev": "webpack --progress",
     "prettier": "prettier --config ../../.prettierrc --write \"**/*.{ts,tsx,html}\"",
     "prettier:diff": "prettier --config ../../.prettierrc \"**/*.{ts,tsx,html}\" --list-different",
     "start": "webpack-dev-server",
@@ -53,7 +54,6 @@
   },
   "dependencies": {
     "@fluentui/svg-icons": "^1.1.0",
-    "@microsoft/fast-tooling": "0.37.9",
     "@microsoft/fast-colors": "^5.3.1",
     "@microsoft/fast-components": "^2.30.6",
     "@microsoft/fast-element": "^1.0.0",
