--- a/.github/workflows/cd-deploy-www-production.yml
+++ b/.github/workflows/cd-deploy-www-production.yml
@@ -49,6 +49,10 @@ jobs:
         name: ${{ env.ARTIFACT_NAME }}
         path: ${{ env.AZURE_WEBAPP_DIST_PATH }}
 
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: 'Deploy to Active Azure Region'
       uses: azure/webapps-deploy@v2
       with:
