--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -50,6 +50,7 @@
     "@types/chai": "^4.2.11",
     "@types/karma": "^6.3.3",
     "@types/mocha": "^7.0.2",
+    "@types/react-dom": "16.9.0",
     "@types/webpack-env": "^1.15.2",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
