--- a/.github/workflows/cd-release-npm.yml
+++ b/.github/workflows/cd-release-npm.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: 16.20.0
 
     - name: Add or Update packages
-      run: sudo yarn global add lerna
+      run: sudo yarn global add lerna@5.5.2
 
     - name: Set Git User
       run: |
